--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./styles/main.css">
 </head>
 
+
 <body>
-  <header> = 1 = CRISTINA
-    <h1>Nombre del grupo</h1>
+  <header class="header">
+    <h1 class="name">Nombre del grupo</h1>
     <nav>
-      <ul>
-        <li>Equipo</li>
-        <li>Quienes Somos</li>
-        <li>Contacto</li>
+      <ul class="navegation">
+        <li><a href="#"></a>Equipo</li>
+        <li><a href="#"></a>Quienes Somos</li>
+        <li<a href="#"></a>Contacto</li>
       </ul>
     </nav>
   </header>
