fusion header + body

--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
 
       <article>
 
-        <h3>Usuaria 1</h3>
+        <img class="user" src="" alt="Foto de Ana.">
 
-        <p>Descripción de usuaria 1</p>
+        <h3 class="picture-title">Ana Algorri Álvarez</h3>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo exercitationem sed culpa id eaque? Culpa, fuga
+          reiciendis odit error consectetur eius inventore provident quod expedita repudiandae impedit temporibus nulla.
+          Nulla.</p>
 
         ICONOS
       </article>
@@ -53,9 +57,13 @@
 
       <article>
 
-        <h3>Usuaria 2</h3>
+        <img class="user" src="" alt="Foto de Andrea.">
 
-        <p>Descripción de usuaria 2</p>
+        <h3>Andrea Diéguez Garrido</h3>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit autem repellat ut consequuntur quam
+          ipsa sint. Sed officia, pariatur dolor illo, praesentium, unde aliquam harum quos consequuntur corporis
+          numquam culpa!</p>
 
         ICONOS
       </article>
