added new designs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
+  <title>Document</title>
 </head>
 
 <!-- CRISTINA -->
@@ -29,123 +30,146 @@
 
   <!-- RAQUEL Y ANDREA  -->
 
-  <main>
-    <section>
-      <h2>Lema</h2> + imágen de fondo
-    </section>
+  <div class="hero"></div>
+  <div class="lema">
+    <h2>Tejiendo sueños, forjando éxito</h2>
+  </div>
+  <section class="section1">
+    <h2 class="team">Equipo</h2>
+    <p class="parrafo">
+      El enfoque colectivo que tenemos para adquirir habilidades sólidas en
+      el ámbito de la programación web, con miras a incursionar en el
+      mercado laboral tecnológico y su perspectiva orientada a objetivos,
+      nos convierten en un grupo formidable y prometedor con el objetivo
+      común de adquirir habilidades sólidas en el ámbito de la programación
+      web, con miras a incursionar en el mercado laboral tecnológico.
+    </p>
+    <p>
+      Demostramos una resuelta determinación y un compromiso inquebrantable
+      con nuestra formación y compartimos la misma pasión por la tecnología
+      y el diseño digital. Mostramos una incansable voluntad de aprender y
+      evolucionar, impulsadas por la ambición de asegurar un futuro
+      profesional en un campo altamente competitivo y en constante cambio.
+    </p>
+  </section>
 
-    <section>
-      <h2>Equipo</h2>
-      Descripción del equipo
-    </section>
+  <section class="section2">
+    <h3 class="skills">Fortalezas</h3>
+    <p>
+      La unión en un equipo de trabajo es esencial para lograr objetivos
+      compartidos. Se basa en la comunicación efectiva, confianza mutua y
+      respeto por la diversidad. La colaboración y el apoyo entre los
+      miembros son fundamentales.
+    </p>
 
+    <h3 class="skills">Debilidades</h3>
+    <p>
+      Hay áreas en las que podemos mejorar, la comunicación puede ser más
+      efectiva y algunos pueden tener menos experiencia en ciertas áreas,
+      sin embargo, esto nos motiva a aprender y apoyarnos mutuamente.
+      Nuestro liderazgo está aquí para guiar y resolver conflictos
+      constructivamente.
+    </p>
+  </section>
 
-    <section>
-      Fortalezas
-      Debilidades
-    </section>
+  <!-- SILVIA Y ANA  -->
 
-    <!-- SILVIA Y ANA  -->
+  <section>
+    <h2 class="about-title">Quiénes Somos</h2>
+    <div class="card-container">
+      <article class="card">
+        <img class="picture" src="./images/photo-Ana.jpg" alt="Foto de Ana.">
 
-    <section>
-      <h2 class="about-title">Quiénes Somos</h2>
-
-      <article class="art">
-        <figure class="picture-container">
-          <img class="picture" src="./images/photo-Ana.jpg" alt="Foto de Ana.">
-        </figure>
 
         <h3 class="picture-title">Ana Algorri Álvarez</h3>
 
-        <p class="picture-description">Soy de Santander y tengo 27 años. He estudiado un grado en Creación y Diseño y un
+        <p class="picture-description">Soy de Santander y tengo 27 años. He estudiado un grado en Creación y Diseño y
+          un
           máster en Diseño Gráfico
           Digital. Tras varias experiencias laborales decidí iniciarme en el mundo de la programación a través de un
           bootcamp. Ahora, traigo toda mi creatividad y atención al detalle al mundo del desarrollo web.</p>
 
         ICONOS
-      </article>
+    </div>
+    </article>
+
+    <article class="card">
+      <img class="picture" src="./images/photo-Andrea.jpg" alt="Foto de Andrea.">
 
 
-      <article class="art">
-        <figure class="picture-container">
-          <img class="picture" src="./images/photo-Andrea.jpg" alt="Foto de Andrea.">
-        </figure>
+      <h3 class="picture-title">Andrea Diéguez Garrido</h3>
 
-        <h3 class="picture-title">Andrea Diéguez Garrido</h3>
+      <p class="picture-description">Tengo 31 años y vengo de Valladolid. Estudié el Grado en Comercio y un Máster de
+        Marketing Digital. Por casualidad, el mundo de la programación llegó a mi vida cuando estuve trabajando como
+        SEO Content, fue entonces cuando me di cuenta que me gustaba más la programación que el marketing. Ahora he
+        decidido apostar por ello gracias al Bootcamp de Adalab.</p>
 
-        <p class="picture-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Reprehenderit autem
-          repellat ut consequuntur quam
-          ipsa sint. Sed officia, pariatur dolor illo, praesentium, unde aliquam harum quos consequuntur corporis
-          numquam culpa!</p>
+      ICONOS
+      </div>
+    </article>
 
-        ICONOS
-      </article>
+    <article class="card">
+      <img class="picture" src="./images/photo-cris.JPEG" alt="Foto de Cris.">
 
-      <article class="art">
 
-        <figure class="picture-container">
-          <img class="picture" src="./images/photo-cris.JPEG" alt="Foto de Cristina.">
-        </figure>
+      <h3 class="picture-title">Cristina Rodríguez García</h3>
 
-        <h3 class="picture-title">Usuaria 3</h3> = 4 = ANA
+      <p class="picture-description">Soy Cristina, vivo en Madrid, tengo 32 años. Estudié Historia del Arte, pero he
+        descubierto un mundo nuevo en la programación. Aunque parezca muy distante de mi pasión, la composición de un
+        cuadro tiene bastante relación con la de una página web. No llegaré a ser Velazquez, pero me gustaría ser una
+        gran developer.</p>
 
-        <p class="picture-description">Descripción de usuaria 3</p>
+      ICONOS
+      </div>
+    </article>
 
-        ICONOS
-      </article>
-
-      <article class="art">
-
-        <figure class="picture-container">
-          <img class="picture" src="./images/photo-Raquel.jpg" alt="Foto de Raquel.">
-        </figure>
-
-        <h3 class="picture-title">Usuaria 4</h3>
-
+    <div class="card-container">
+      <article class="card">
+        <img class="picture" src="./images/photo-Raquel.jpg" alt="Foto de Raquel.">
+        <h3 class="picture-title">Raquel Collado Herrera</h3>
         <p class="picture-description">Soy de Madrid, tengo 34 años, tengo un grado medio en Gestión administrativa y
           vengo del sector de servicio
           de atención al cliente el cual me permitió desarrollar habilidades esenciales de comunicación.
           Con intenciones de redirigir mi vida laboral inicio un bootcamp de programación web y me he convertido en
-          Adalaber.</p>
-
+          Adalaber. </p>
         ICONOS
-      </article>
+    </div>
+    </article>
 
-      <article class="art">
-
-        <figure class="picture-container">
-          <img class="picture" src="./images/photo-Silvia.jpg" alt="Foto de Silvia.">
-        </figure>
-
-        <h3 class="picture-title">Usuaria 5</h3>
-
+    <div class="card-container">
+      <article class="card">
+        <img class="picture" src="./images/photo-Silvia.jpg" alt="Foto de Silvia.">
+        <h3 class="picture-title">Ana Algorri Álvarez</h3>
         <p class="picture-description">Soy de Barcelona y tengo 30 años.
-          Estudié Una FPII de indústrias de la alimentación y después de trabajar varios años cara al público, me decidí
-          a probar algo diferente para adaptarme a las nuevas necesidades del mundo laboral.
-        </p>
-
+          Estudié Una FPII de indústrias de la alimentación y después de trabajar varios años cara al público, me
+          decidí
+          a probar algo diferente para adaptarme a las nuevas necesidades del mundo laboral. </p>
         ICONOS
-      </article>
+    </div>
+    </article>
 
-    </section>
+  </section>
 
   </main>
 
   <!-- RAQUEL Y ANDREA -->
 
-  <footer>
-
-    <p>Nombre del grupo ©2023</p>
-
-    <nav>
+  <footer class="footer">
+    <div class="footer-name">
+      <p>Nombre del grupo ©2023</p>
+    </div>
+    <nav class="footer-nav">
       <ul>
-        <li>Equipo</li>
-        <li>Quiénes Somos</li>
-        <li>Contacto</li>
+        <li class="footer-item"><a class="list" href="#">Equipo</a></li>
+        <li class="footer-item">
+          <a class="list" href="#">Quiénes Somos</a>
+        </li>
+        <li class="footer-item"><a class="list" href="#">Contacto</a></li>
       </ul>
     </nav>
-
-    <img src="" alt="LOGO">
+    <div class="container footer-img">
+      <img src="./images/logo-adalab.png" alt="LOGO" />
+    </div>
   </footer>
 
 </body>
