--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nombre del grupo</title>
   <link rel="stylesheet" href="./styles/reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
+  <script src="https://kit.fontawesome.com/66349fc88a.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 
@@ -89,10 +90,17 @@
           Digital. Tras varias experiencias laborales decidí iniciarme en el mundo de la programación a través de un
           bootcamp. Ahora, traigo toda mi creatividad y atención al detalle al mundo del desarrollo web.</p>
 
-        ICONOS
+        <div class="icon-box">
+          <ul class="icons">
+            <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+            <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+          </ul>
+        </div>
     </div>
     </article>
-
+    <div class="card-container">
     <article class="card">
       <img class="picture" src="./images/photo-Andrea.jpg" alt="Foto de Andrea.">
 
@@ -104,10 +112,17 @@
         SEO Content, fue entonces cuando me di cuenta que me gustaba más la programación que el marketing. Ahora he
         decidido apostar por ello gracias al Bootcamp de Adalab.</p>
 
-      ICONOS
+        <div class="icon-box">
+          <ul class="icons">
+            <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+            <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+          </ul>
+        </div>
       </div>
     </article>
-
+    <div class="card-container">
     <article class="card">
       <img class="picture" src="./images/photo-cris.JPEG" alt="Foto de Cris.">
 
@@ -119,7 +134,14 @@
         cuadro tiene bastante relación con la de una página web. No llegaré a ser Velazquez, pero me gustaría ser una
         gran developer.</p>
 
-      ICONOS
+        <div class="icon-box">
+          <ul class="icons">
+            <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+            <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+          </ul>
+        </div>
       </div>
     </article>
 
@@ -132,19 +154,33 @@
           de atención al cliente el cual me permitió desarrollar habilidades esenciales de comunicación.
           Con intenciones de redirigir mi vida laboral inicio un bootcamp de programación web y me he convertido en
           Adalaber. </p>
-        ICONOS
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
     </div>
     </article>
 
     <div class="card-container">
       <article class="card">
         <img class="picture" src="./images/photo-Silvia.jpg" alt="Foto de Silvia.">
-        <h3 class="picture-title">Ana Algorri Álvarez</h3>
+        <h3 class="picture-title">Silvia Torres Cubero</h3>
         <p class="picture-description">Soy de Barcelona y tengo 30 años.
           Estudié Una FPII de indústrias de la alimentación y después de trabajar varios años cara al público, me
           decidí
           a probar algo diferente para adaptarme a las nuevas necesidades del mundo laboral. </p>
-        ICONOS
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
     </div>
     </article>
 
