final body structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@300&family=Rubik:wght@300;400&family=Ysabeau+Infant:ital,wght@1,100&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./styles/main.css">
   <script src="https://kit.fontawesome.com/66349fc88a.js" crossorigin="anonymous"></script>
   <title>Document</title>
@@ -101,16 +106,16 @@
     </div>
     </article>
     <div class="card-container">
-    <article class="card">
-      <img class="picture" src="./images/photo-Andrea.jpg" alt="Foto de Andrea.">
+      <article class="card">
+        <img class="picture" src="./images/photo-Andrea.jpg" alt="Foto de Andrea.">
 
 
-      <h3 class="picture-title">Andrea Diéguez Garrido</h3>
+        <h3 class="picture-title">Andrea Diéguez Garrido</h3>
 
-      <p class="picture-description">Tengo 31 años y vengo de Valladolid. Estudié el Grado en Comercio y un Máster de
-        Marketing Digital. Por casualidad, el mundo de la programación llegó a mi vida cuando estuve trabajando como
-        SEO Content, fue entonces cuando me di cuenta que me gustaba más la programación que el marketing. Ahora he
-        decidido apostar por ello gracias al Bootcamp de Adalab.</p>
+        <p class="picture-description">Tengo 31 años y vengo de Valladolid. Estudié el Grado en Comercio y un Máster de
+          Marketing Digital. Por casualidad, el mundo de la programación llegó a mi vida cuando estuve trabajando como
+          SEO Content, fue entonces cuando me di cuenta que me gustaba más la programación que el marketing. Ahora he
+          decidido apostar por ello gracias al Bootcamp de Adalab.</p>
 
         <div class="icon-box">
           <ul class="icons">
@@ -120,19 +125,19 @@
             <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
           </ul>
         </div>
-      </div>
+    </div>
     </article>
     <div class="card-container">
-    <article class="card">
-      <img class="picture" src="./images/photo-cris.JPEG" alt="Foto de Cris.">
+      <article class="card">
+        <img class="picture" src="./images/photo-cris.JPEG" alt="Foto de Cris.">
 
 
-      <h3 class="picture-title">Cristina Rodríguez García</h3>
+        <h3 class="picture-title">Cristina Rodríguez García</h3>
 
-      <p class="picture-description">Soy Cristina, vivo en Madrid, tengo 32 años. Estudié Historia del Arte, pero he
-        descubierto un mundo nuevo en la programación. Aunque parezca muy distante de mi pasión, la composición de un
-        cuadro tiene bastante relación con la de una página web. No llegaré a ser Velazquez, pero me gustaría ser una
-        gran developer.</p>
+        <p class="picture-description">Soy Cristina, vivo en Madrid, tengo 32 años. Estudié Historia del Arte, pero he
+          descubierto un mundo nuevo en la programación. Aunque parezca muy distante de mi pasión, la composición de un
+          cuadro tiene bastante relación con la de una página web. No llegaré a ser Velazquez, pero me gustaría ser una
+          gran developer.</p>
 
         <div class="icon-box">
           <ul class="icons">
@@ -142,7 +147,7 @@
             <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
           </ul>
         </div>
-      </div>
+    </div>
     </article>
 
     <div class="card-container">
@@ -154,14 +159,14 @@
           de atención al cliente el cual me permitió desarrollar habilidades esenciales de comunicación.
           Con intenciones de redirigir mi vida laboral inicio un bootcamp de programación web y me he convertido en
           Adalaber. </p>
-          <div class="icon-box">
-            <ul class="icons">
-              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
-              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
-              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
-              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
-            </ul>
-          </div>
+        <div class="icon-box">
+          <ul class="icons">
+            <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+            <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+          </ul>
+        </div>
     </div>
     </article>
 
@@ -173,14 +178,14 @@
           Estudié Una FPII de indústrias de la alimentación y después de trabajar varios años cara al público, me
           decidí
           a probar algo diferente para adaptarme a las nuevas necesidades del mundo laboral. </p>
-          <div class="icon-box">
-            <ul class="icons">
-              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
-              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
-              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
-              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
-            </ul>
-          </div>
+        <div class="icon-box">
+          <ul class="icons">
+            <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+            <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+            <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+          </ul>
+        </div>
     </div>
     </article>
 
