added background image

--- a/index.html
+++ b/index.html
@@ -24,53 +24,44 @@
       <ul class="navegation">
         <li><a href="#"></a>Equipo</li>
         <li><a href="#"></a>Quienes Somos</li>
-        <li<a href="#"></a>Contacto</li>
+        <li><a href="#"></a>Contacto</li>
       </ul>
     </nav>
   </header>
 
   <!-- RAQUEL Y ANDREA  -->
-
+  <section>
   <div class="hero"></div>
-  <div class="lema">
-    <h2>Tejiendo sueños, forjando éxito</h2>
-  </div>
+    <h2 class="lema">Tejiendo sueños, forjando éxito</h2>
+  </section>
+  
   <section class="section1">
+    <div>
     <h2 class="team">Equipo</h2>
     <p class="parrafo">
-      El enfoque colectivo que tenemos para adquirir habilidades sólidas en
-      el ámbito de la programación web, con miras a incursionar en el
-      mercado laboral tecnológico y su perspectiva orientada a objetivos,
-      nos convierten en un grupo formidable y prometedor con el objetivo
-      común de adquirir habilidades sólidas en el ámbito de la programación
-      web, con miras a incursionar en el mercado laboral tecnológico.
+       Demostramos una resuelta determinación y un compromiso inquebrantable
+       con nuestra formación, compartimos la misma pasión por la tecnología, diseño digital y mostramos una incansable voluntad de aprender y
+       evolucionar.
     </p>
-    <p>
-      Demostramos una resuelta determinación y un compromiso inquebrantable
-      con nuestra formación y compartimos la misma pasión por la tecnología
-      y el diseño digital. Mostramos una incansable voluntad de aprender y
-      evolucionar, impulsadas por la ambición de asegurar un futuro
-      profesional en un campo altamente competitivo y en constante cambio.
+    <p class="parrafo">
+      Nuestra perspectiva orientada a cumplir los objetivos que nos proponemos y el deseo por asegurarnos un futuro profesional en un campo altamente competitivo y en constante cambio nos convierte en un grupo formidable y prometedor.
     </p>
+  </div>
   </section>
 
   <section class="section2">
-    <h3 class="skills">Fortalezas</h3>
-    <p>
-      La unión en un equipo de trabajo es esencial para lograr objetivos
-      compartidos. Se basa en la comunicación efectiva, confianza mutua y
-      respeto por la diversidad. La colaboración y el apoyo entre los
-      miembros son fundamentales.
+    <div class="simbol"></div>
+    <div><h3 class="skills">Fortalezas</h3>
+    <p class="parrafo">
+      La comunicación efectiva, confianza mutua,
+      respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo como el nuestro. Es esencial para lograr nuestros objetivos.
     </p>
-
     <h3 class="skills">Debilidades</h3>
-    <p>
-      Hay áreas en las que podemos mejorar, la comunicación puede ser más
-      efectiva y algunos pueden tener menos experiencia en ciertas áreas,
-      sin embargo, esto nos motiva a aprender y apoyarnos mutuamente.
-      Nuestro liderazgo está aquí para guiar y resolver conflictos
-      constructivamente.
+    <p class="parrafo">
+      Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto por estar en desacuerdo, ser mas lentas o tener una organización diferente.
+      Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella. 
     </p>
+  </div>
   </section>
 
   <!-- SILVIA Y ANA  -->
