--- a/version_0/index.html
+++ b/version_0/index.html
@@ -181,23 +181,25 @@
 
   <!-- RAQUEL Y ANDREA -->
 
-  <footer class="footer">
-    <div class="footer-name">
-      <p>Nombre del grupo ©2023</p>
-    </div>
-    <nav class="footer-nav">
-      <ul>
-        <li class="footer-item"><a class="list" href="#">Equipo</a></li>
-        <li class="footer-item">
-          <a class="list" href="#">Quiénes Somos</a>
-        </li>
-        <li class="footer-item"><a class="list" href="#">Contacto</a></li>
-      </ul>
-    </nav>
-    <div class="container footer-img">
-      <img src="./images/logo-adalab.png" alt="LOGO" />
-    </div>
-  </footer>
+   <footer class="footer">
+      <div class="footer-name">
+        <p>Nombre del grupo ©2023</p>
+      </div>
+
+      <nav class="footer-nav">
+        <ul class="ul">
+          <li class="footer-item"><a class="list" href="#">Equipo</a></li>
+          <li class="footer-item">
+            <a class="list" href="#">Quiénes Somos</a>
+          </li>
+          <li class="footer-item"><a class="list" href="#">Contacto</a></li>
+        </ul>
+      </nav>
+
+      <div class="footer-img">
+        <img class="logo" src="./images/logo-adalab.png" alt="LOGO" />
+      </div>
+    </footer>
 
 </body>
 
