partials added part 2

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,16 +2,218 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adalab Web Starter Kit</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/main.css" />
-  <link rel="icon" href="./assets/images/favicon.png" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rebirth Web</title>
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@300&family=Rubik:wght@300;400&family=Ysabeau+Infant:ital,wght@1,100&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/66349fc88a.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<!-- CRISTINA -->
 
+<body>
+  <main>
+    <header class="header">
+      <h1 class="name">Nombre del grupo</h1>
+      <nav>
+        <ul class="navegation">
+          <li><a href="#"></a>Equipo</li>
+          <li><a href="#"></a>Quienes Somos</li>
+          <li><a href="#"></a>Contacto</li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- RAQUEL Y ANDREA  -->
+    <section>
+      <div class="hero"></div>
+      <h2 class="lema">Tejiendo sueños, forjando éxito</h2>
+    </section>
+
+    <section class="section1">
+      <div>
+        <h2 class="team">Equipo</h2>
+        <p class="parrafo">
+          Demostramos una resuelta determinación y un compromiso inquebrantable
+          con nuestra formación, compartimos la misma pasión por la tecnología, diseño digital y mostramos una
+          incansable
+          voluntad de aprender y
+          evolucionar.
+        </p>
+        <p class="parrafo">
+          Nuestra perspectiva orientada a cumplir los objetivos que nos proponemos y el deseo por asegurarnos un futuro
+          profesional en un campo altamente competitivo y en constante cambio nos convierte en un grupo formidable y
+          prometedor.
+        </p>
+      </div>
+    </section>
+
+    <section class="section2">
+      <div class="simbol"></div>
+      <div>
+        <h3 class="skills">Fortalezas</h3>
+        <p class="parrafo">
+          La comunicación efectiva, confianza mutua,
+          respeto por la diversidad y apoyo mutuo son cinco de las fortalezas que crea la unión en un equipo de trabajo
+          como el nuestro. Es esencial para lograr nuestros objetivos.
+        </p>
+        <h3 class="skills">Debilidades</h3>
+        <p class="parrafo">
+          Siempre se puede mejorar, algunas podemos tener menos experiencia en ciertas áreas, miedo a tener un conflicto
+          por estar en desacuerdo, ser mas lentas o tener una organización diferente.
+          Pero ante todo somos un equipo y todas remamos hacia delante, si una se atasca el resto tira de ella.
+        </p>
+      </div>
+    </section>
+
+    <!-- SILVIA Y ANA  -->
+
+    <section>
+      <h2 class="about-title">Quiénes Somos</h2>
+      <div class="card-container">
+        <article class="card">
+          <img class="picture" src="./assets/images/photo-Ana.jpg" alt="Foto de Ana.">
+
+
+          <h3 class="picture-title">Ana Algorri Álvarez</h3>
+
+          <p class="picture-description">Soy de Santander y tengo 27 años. He estudiado un grado en Creación y Diseño y
+            un
+            máster en Diseño Gráfico
+            Digital. Tras varias experiencias laborales decidí iniciarme en el mundo de la programación a través de un
+            bootcamp. Ahora, traigo toda mi creatividad y atención al detalle al mundo del desarrollo web.</p>
+
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
+      </div>
+      </article>
+      <div class="card-container">
+        <article class="card">
+          <img class="picture" src="./assets/images/photo-Andrea.jpg" alt="Foto de Andrea.">
+
+
+          <h3 class="picture-title">Andrea Diéguez Garrido</h3>
+
+          <p class="picture-description">Tengo 31 años y vengo de Valladolid. Estudié el Grado en Comercio y un Máster
+            de
+            Marketing Digital. Por casualidad, el mundo de la programación llegó a mi vida cuando estuve trabajando como
+            SEO Content, fue entonces cuando me di cuenta que me gustaba más la programación que el marketing. Ahora he
+            decidido apostar por ello gracias al Bootcamp de Adalab.</p>
+
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
+      </div>
+      </article>
+      <div class="card-container">
+        <article class="card">
+          <img class="picture" src="./assets/images/photo-cris.JPEG" alt="Foto de Cris.">
+
+
+          <h3 class="picture-title">Cristina Rodríguez García</h3>
+
+          <p class="picture-description">Soy de Madrid, tengo 32 años. Estudié Historia del Arte, pero he
+            descubierto un mundo nuevo en la programación. Aunque parezca muy distante de mi pasión, la composición de
+            un
+            cuadro tiene bastante relación con la de una página web. No llegaré a ser Velazquez, pero me gustaría ser
+            una
+            gran developer.</p>
+
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
+      </div>
+      </article>
+
+      <div class="card-container">
+        <article class="card">
+          <img class="picture" src="./assets/images/photo-Raquel.jpg" alt="Foto de Raquel.">
+          <h3 class="picture-title">Raquel Collado Herrera</h3>
+          <p class="picture-description">Soy de Madrid, tengo 34 años, tengo un grado medio en Gestión administrativa y
+            vengo del sector de servicio
+            de atención al cliente el cual me permitió desarrollar habilidades esenciales de comunicación.
+            Con intenciones de redirigir mi vida laboral inicio un bootcamp de programación web y me he convertido en
+            Adalaber. </p>
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
+      </div>
+      </article>
+
+      <div class="card-container">
+        <article class="card">
+          <img class="picture" src="./assets/images/photo-Silvia.jpg" alt="Foto de Silvia.">
+          <h3 class="picture-title">Silvia Torres Cubero</h3>
+          <p class="picture-description">Soy de Barcelona y tengo 30 años.
+            Estudié Una FPII de indústrias de la alimentación y después de trabajar varios años cara al público, me
+            decidí
+            a probar algo diferente para adaptarme a las nuevas necesidades del mundo laboral. </p>
+          <div class="icon-box">
+            <ul class="icons">
+              <li><a href="#"><i class="icon fa-brands fa-twitter"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-linkedin-in"></i></a></li>
+              <li><a href=""><i class="icon fa-brands fa-github-alt"></i></a></li>
+              <li><a href=""><i class="icon fa-solid fa-envelope"></i></a></li>
+            </ul>
+          </div>
+      </div>
+      </article>
+
+    </section>
+
+  </main>
+
+  <!-- RAQUEL Y ANDREA -->
+
+  <footer class="footer">
+    <div class="footer-name">
+      <p>Nombre del grupo ©2023</p>
+    </div>
+
+    <nav class="footer-nav">
+      <ul class="ul">
+        <li class="footer-item"><a class="list" href="#">Equipo</a></li>
+        <li class="footer-item">
+          <a class="list" href="#">Quiénes Somos</a>
+        </li>
+        <li class="footer-item"><a class="list" href="#">Contacto</a></li>
+      </ul>
+    </nav>
+
+    <div class="footer-img">
+      <img class="logo" src="./assets/images/logo-adalab.png" alt="LOGO" />
+    </div>
+  </footer>
 
 </body>
 
