--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -1,125 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contacto</title>
-    <link rel="stylesheet" href="./assets/css/main.css" />
-  </head>
-  <body>
-    <header class="header">
-      <h1 class="header__name">
-        <a href="./index.html" title="Rebirth" class="navegation__list"
-          >Rebirth Web</a
-        >
-      </h1>
-      <nav>
-        <ul class="navegation">
-          <li>
-            <a
-              href="#teamcontainer"
-              title="Ir a Equipo"
-              class="navegation__list"
-              >Equipo</a
-            >
-          </li>
-          <li>
-            <a
-              href="#about-us"
-              title="Ir a Quienes Somos"
-              class="navegation__list"
-              >Quienes Somos</a
-            >
-          </li>
-          <li>
-            <a href="#" title="Ir a Contacto" class="navegation__list"
-              >Contacto</a
-            >
-          </li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contacto</title>
+  <link rel="stylesheet" href="./assets/css/main.css" />
+</head>
+<body>
+  <header class="header">
+    <h1 class="header__name">
+      <a href="./index.html" title="Rebirth" class="navegation__list">Rebirth Web</a>
+    </h1>
+    <nav>
+      <ul class="navegation">
+        <li>
+          <a href="./index.html#teamcontainer" title="Ir a Equipo" class="navegation__list">Equipo</a>
+        </li>
+        <li>
+          <a href="./index.html#about-us" title="Ir a Quienes Somos" class="navegation__list">Quienes Somos</a>
+        </li>
+        <li>
+          <a href="#" title="Ir a Contacto" class="navegation__list">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-    <main>
-      <div></div>
+  <main>
+    <div class="image"></div>
 
-      <section>
-        <h1>Contacto</h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet,
-          placeat. Eius necessitatibus dolor delectus quibusdam deserunt enim
-          nisi minus suscipit ipsam labore sapiente voluptatibus nam neque,
-          molestiae maxime optio consequatur.
-        </p>
-        <p>Todos los campos obligatorios con * son obligatorios.</p>
-        <div>
-          <form action="">
-            <label for="firstname">Nombre completo *</label>
-            <input
-              for="firstname"
-              type="text"
-              placeholder="Nombre..."
-              id="firstname"
-              name="firstname"
-              required
-            />
+    <section class="section">
+      <h1 class="section__title">Contacto</h1>
+      <p class="section__title--parrafo">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet,
+        placeat. Eius necessitatibus dolor delectus quibusdam deserunt enim
+        nisi minus suscipit ipsam labore sapiente voluptatibus nam neque,
+        molestiae maxime optio consequatur.
+      </p>
+      <p class="section__title--parrafo">
+        Todos los campos obligatorios con * son obligatorios.
+      </p>
+      <div>
+        <form class="form">
+          <label for="firstname" class="form__name">Nombre completo *</label>
+          <input for="firstname" type="text" placeholder="Nombre..." id="firstname" name="firstname" required />
 
-            <label for="email">Email *</label>
-            <input
-              for="email"
-              type="email"
-              placeholder="nombre.apellidos@mail.com"
-              id="email"
-              name="firstname"
-              required
-            />
+          <label for="email" class="form__name email">Email *</label>
+          <input class="form__name--email" for="email" type="email" placeholder="nombre.apellidos@mail.com" id="email"
+            name="firstname" required />
 
-            <label for="telephone">Teléfono</label>
-            <input
-              for="telephone"
-              type="number"
-              placeholder="Ej:123456789"
-              id="telephone"
-              name="telephone"
-            />
-            <label for="messages">Mensaje *</label>
-            <textarea
-              rows="10"
-              cols="30"
-              id="messages"
-              name="messages"
-              required
-            >
-¿Qué necesitas?</textarea
-            >
-            <button>Enviar</button>
-          </form>
-        </div>
-      </section>
-    </main>
-
-    <footer class="footer">
-      <div class="footer__name">
-        <p>Rebirth Web ©2023</p>
+          <label for="telephone" class="form__name">Teléfono</label>
+          <input for="telephone" type="number" placeholder="Ej:123456789" id="telephone" name="telephone" />
+          <label for="messages" class="form__name">Mensaje *<label>
+              <textarea rows="10" cols="30" id="messages" name="messages" required>¿Qué necesitas?</textarea>
+              <button class="button">Enviar</button>
+        </form>
       </div>
+    </section>
+  </main>
 
-      <nav class="footer__nav">
-        <ul class="footer__nav__ul">
-          <li class="footer__item">
-            <a class="footer__link" href="#">Equipo</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link" href="#">Quiénes Somos</a>
-          </li>
-          <li class="footer__item">
-            <a class="footer__link" href="#">Contacto</a>
-          </li>
-        </ul>
-      </nav>
+  <footer class="footer">
+    <div class="footer__name">
+      <p>Rebirth Web ©2023</p>
+    </div>
 
-      <div class="footer__img">
-        <img class="logo" src="./assets/images/logo-adalab.png" alt="LOGO" />
-      </div>
-    </footer>
-  </body>
+    <nav class="footer__nav">
+      <ul class="footer__nav__ul">
+        <li class="footer__item">
+          <a class="footer__link" href="#">Equipo</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Quiénes Somos</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="footer__img">
+      <img class="logo" src="./assets/images/logo-adalab.png" alt="LOGO" />
+    </div>
+  </footer>
+</body>
 </html>
