--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,8 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto:wght@300&family=Rubik:wght@300;400;500&family=Ysabeau+Infant:ital,wght@1,100&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <script
       src="https://kit.fontawesome.com/66349fc88a.js"
       crossorigin="anonymous"
