--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rebirth Web</title>
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto:wght@300&family=Rubik:wght@300;400;500&family=Ysabeau+Infant:ital,wght@1,100&display=swap"
-      rel="stylesheet"/>
-    <script
-      src="https://kit.fontawesome.com/66349fc88a.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
 
-  <body>
-    <main>
-      <include src="./partials/header.html"></include>
-      <include src="./partials/hero.html"></include>
-      <include src="./partials/team_adalabers.html"></include>
-      <include src="./partials/footer.html"></include>
-    </main>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rebirth Web</title>
+  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto:wght@300&family=Rubik:wght@300;400;500&family=Ysabeau+Infant:ital,wght@1,100&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/66349fc88a.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <include src="./partials/header.html"></include>
+  <main>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/team_adalabers.html"></include>
+    <include src="./partials/footer.html"></include>
+  </main>
+</body>
+
 </html>
